dashboarding-resources/aiops-ltpa-proxy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aiops-ltpa-proxy
  annotations:
    # This annotation tells OpenShift to automatically generate a TLS certificate
    # The certificate will be stored in a secret named 'proxy-tls-cert'
    # This is Option B - OpenShift service serving certificate (recommended)
    service.beta.openshift.io/serving-cert-secret-name: proxy-tls-cert
spec:
  type: ClusterIP
  ports:
  - name: proxy
    port: 8443
    targetPort: 8443
    protocol: TCP
  - name: health
    port: 8444
    targetPort: 8444
    protocol: TCP
  selector:
    app: aiops-ltpa-proxy

# Made with Bob
